Updates from lumsdaine comments

--- a/master1.bib
+++ b/master1.bib
@@ -1,5 +1,5 @@
 @Article{ barbosa2006distributive,
-  title = "{Distributive and Demand Cycles in the US Economy-A Structuralist Goodwin Model}",
+  title = "Distributive and Demand Cycles in the US Economy-A Structuralist Goodwin Model",
   author = "N.H. Barbosa-Filho and L. Taylor",
   journal = "Metroeconomica",
   volume = "57",
@@ -10,7 +10,7 @@
 }
 
 @Misc{ bleckerlecture,
-  title = "{Lecture on Neo-Kaleckian Macro Models}",
+  title = "Lecture on Neo-Kaleckian Macro Models",
   author = "R.A. Blecker",
   year = "2009",
   location = "American University",
@@ -18,7 +18,7 @@
 }
 
 @Book{ marx1977capital,
-  title = "{Capital, vol. 1}",
+  title = "Capital, vol. 1",
   author = "K. Marx",
   year = "1976",
   address = "London, UK",
@@ -26,7 +26,7 @@
 }
 
 @Book{ marx1981capital,
-  title = "{Capital. Vol. 3}",
+  title = "Capital. Vol. 3",
   author = "K. Marx",
   year = "1981",
   address = "London, UK",
@@ -42,7 +42,7 @@
 }
 
 @Article{ chinn2006primer,
-  title = "{A primer on real effective exchange rates: Determinants, overvaluation, trade flows and competitive devaluation}",
+  title = "A primer on real effective exchange rates: Determinants, overvaluation, trade flows and competitive devaluation",
   author = "M.D. Chinn",
   journal = "Open Economies Review",
   volume = "17",
@@ -64,7 +64,7 @@
 }
 
 @Book{ goodwin1967socialism,
-  title = "{Socialism, capitalism and economic growth}",
+  title = "Socialism, capitalism and economic growth",
   author = "R.M. Goodwin and CH Feinstein",
   year = "1967",
   address = "Cambridge, UK",
@@ -72,7 +72,7 @@
 }
 
 @InCollection{ gordon1995growth,
-  title = "{Growth distribution, and the rules of the game: social structuralist macro foundations for a democratic economic policy}",
+  title = "Growth distribution, and the rules of the game: social structuralist macro foundations for a democratic economic policy",
   author = "D. Gordon",
   booktitle = "Macroeconomic Policy after the Conservative Era",
   editor = "G. Epstein and H. Gintis",
@@ -83,7 +83,7 @@
 }
 
 @InCollection{ blecker20028,
-  title = "{Distribution, demand and growth in neo-Kaleckian macro-models}",
+  title = "Distribution, demand and growth in neo-Kaleckian macro-models",
   author = "R.A. Blecker",
   booktitle = "The Economics of Demand-led Growth: Challenging the Supply-side Vision of the Long Run",
   editor = "M. Setterfield",
@@ -94,14 +94,14 @@
 }
 
 @Misc{ clarida1991real,
-  title = "{The Real Exchange Rate, Exports, and Manufacturing Profits: A Theoreti-cal Framework With Some Empirical Support}",
+  title = "The Real Exchange Rate, Exports, and Manufacturing Profits: A Theoreti-cal Framework With Some Empirical Support",
   author = "R.H. Clarida",
   year = "1991",
   publisher = "NBER"
 }
 
 @Article{ dornbusch1976expectations,
-  title = "{Expectations and exchange rate dynamics}",
+  title = "Expectations and exchange rate dynamics",
   author = "R. Dornbusch",
   journal = "The Journal of Political Economy",
   volume = "84",
@@ -112,14 +112,14 @@
 }
 
 @InProceedings{ bleckerkaleckiopen,
-  title = "{Open economy models of distribution and growth}",
+  title = "Open economy models of distribution and growth",
   author = "R. Blecker",
   year = "2010",
   booktitle = "Eastern Economic Association Annual Meeting"
 }
 
 @Article{ stock2010,
-  title = "{Globalization and the effects of changes in functional income distribution on aggregate demand in Germany}",
+  title = "Globalization and the effects of changes in functional income distribution on aggregate demand in Germany",
   author = "E. Hein E. Stockhammer and L. Grafl",
   journal = "International Review of Economics",
   year = "2010",
@@ -127,7 +127,7 @@
 }
 
 @InCollection{ bowles19955,
-  title = "{Wages, aggregate demand, and employment in an open economy: an empirical investigation}",
+  title = "Wages, aggregate demand, and employment in an open economy: an empirical investigation",
   author = "S. Bowles and R. Boyer",
   booktitle = "Macroeconomic policy after the conservative era: studies in investment, saving and finance",
   editor = "G. Epstein and H. Gintis",
@@ -138,7 +138,7 @@
 }
 
 @Article{ stockonaron2004,
-  title = "{Accumulation, distribution and employment: a structural VAR approach to a Kaleckian macro-model}",
+  title = "Accumulation, distribution and employment: a structural VAR approach to a Kaleckian macro-model",
   author = {E. Stockhammer and {\"O}. Onaran},
   journal = "Structural Change and Economic Dynamics",
   volume = "15",
@@ -147,7 +147,7 @@
 }
 
 @PhDThesis{ fernandez2005,
-  title = "{Income Distribution and Aggregate Demand in the U.S Economy: An Empirical Investigation}",
+  title = "Income Distribution and Aggregate Demand in the U.S Economy: An Empirical Investigation",
   author = "J. Fernandez",
   school = "American University",
   year = "2005",
@@ -156,7 +156,7 @@
 }
 
 @Book{ foley1999growth,
-  title = "{Growth and distribution}",
+  title = "Growth and distribution",
   author = "D.K. Foley and T.R. Michl",
   year = "1999",
   address = "Cambridge, MA",
@@ -164,15 +164,15 @@
 }
 
 @TechReport{ shaiklevy,
-  title = "{Is International Growth the Way Out of U.S. Current Account Deficits?}",
+  title = "Is International Growth the Way Out of U.S. Current Account Deficits?",
   author = "A. Zezza G. Shaikh and C. {Dos Santos}",
   institution = "Levy Institute",
   year = "2003",
-  note = "\url{http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf&pubid=548}"
+  note = "\url{http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf\&pubid=548}"
 }
 
 @Article{ rudebusch2008macro,
-  title = "{A macro-finance model of the Term Structure, Monetary Policy and the Economy}",
+  title = "A macro-finance model of the Term Structure, Monetary Policy and the Economy",
   author = "G.D. Rudebusch and T. Wu",
   journal = "The Economic Journal",
   volume = "118",
@@ -197,7 +197,7 @@
 }
 
 @Article{ backus1989risk,
-  title = "{Risk premiums in the term structure: Evidence from artificial economies}",
+  title = "Risk premiums in the term structure: Evidence from artificial economies",
   author = "Allan Backus and Allan Gregory and Stanley Zin",
   journal = "Journal of Monetary Economics",
   volume = "24",
@@ -208,7 +208,7 @@
 }
 
 @Article{ rudebusch2008examining,
-  title = "{Examining the bond premium puzzle with a DSGE model}",
+  title = "Examining the bond premium puzzle with a DSGE model",
   author = "G.D. Rudebusch and E.T. Swanson",
   journal = "Journal of Monetary Economics",
   volume = "55",
@@ -217,8 +217,8 @@
   publisher = "Elsevier"
 }
 
-@Misc{ keynes1936general,
-  title = "{The General Theory of Employment, Interest and Money}",
+@book{ keynes1936general,
+  title = "The General Theory of Employment, Interest and Money",
   author = "J.M. Keynes",
   year = "1936",
   publisher = "The Macmillan Press.",
@@ -226,7 +226,7 @@
 }
 
 @Article{ sack2005monetary,
-  title = "{Monetary policy alternatives at the zero bound: An empirical assessment}",
+  title = "Monetary policy alternatives at the zero bound: An empirical assessment",
   author = " B. Bernanke and V. Reinhart and B. Sack",
   journal = "Brookings Papers on Economic Activity",
   volume = "2004",
@@ -238,7 +238,7 @@
 }
 
 @Article{ang2006does,
-  title = "{What does the yield curve tell us about GDP growth?}",
+  title = "What does the yield curve tell us about GDP growth?",
   author = "A. Ang and M. Piazzesi and M. Wei",
   journal = "Journal of Econometrics",
   volume = "131",
@@ -250,7 +250,7 @@
 }
 
 @Article{ rudebusch2007macroeconomic,
-  title = "{Macroeconomic implications of changes in the term premium}",
+  title = "Macroeconomic implications of changes in the term premium",
   author = "G.D. Rudebusch and B.P. Sack and E.T. Swanson",
   journal = "Review-Federal Reserve Bank of Saint Louis",
   volume = "89",
@@ -287,7 +287,7 @@
 }
 
 @Article{ lucas1971investment,
-  title = "{Investment under uncertainty}",
+  title = "Investment under uncertainty",
   author = "R.E. {Lucas Jr} and E.C. Prescott",
   journal = "Econometrica: Journal of the Econometric Society",
   volume = "39",
@@ -299,7 +299,7 @@
 }
 
 @InProceedings{ taylor1993discretion,
-  title = "{Discretion versus policy rules in practice}",
+  title = "Discretion versus policy rules in practice",
   author = "J.B. Taylor",
   booktitle = "Carnegie-Rochester conference series on public policy",
   volume = "39",
@@ -310,7 +310,7 @@
 }
 
 @Article{ orphanides2001monetary,
-  title = "{Monetary policy rules based on real-time data}",
+  title = "Monetary policy rules based on real-time data",
   author = "A. Orphanides",
   journal = "American Economic Review",
   volume = "91",
@@ -322,14 +322,14 @@
 }
 
 @Article{ manninggang,
-  title = "{The Gang System and the Structure of Slave Employment}",
+  title = "The Gang System and the Structure of Slave Employment",
   author = "R.L. Manning",
   journal = "Robert W. Fogel, Ralph A. Galantine, \& Richard L. Manning (eds.), Without Consent or Contract: The Rise and Fall of American Slavery, Evidence and Methods",
   pages = "109"
 }
 
 @Book{ schmitz1977economic,
-  title = "{Economic analysis of antebellum sugar plantations in Louisiana}",
+  title = "Economic analysis of antebellum sugar plantations in Louisiana",
   author = "M. Schmitz",
   isbn = "0405099258",
   year = "1977",
@@ -337,7 +337,7 @@
 }
 
 @Article{ sutch1965profitability,
-  title = "{The Profitability of Ante Bellum Slavery: Revisited}",
+  title = "The Profitability of Ante Bellum Slavery: Revisited",
   author = "R. Sutch",
   journal = "Southern Economic Journal",
   volume = "31",
@@ -368,7 +368,7 @@
 }
 
 @Book{ l2009production,
-  title = "{Production and Price of Cotton for One Hundred Years}",
+  title = "Production and Price of Cotton for One Hundred Years",
   author = "James L. Watkins",
   isbn = "9781113416629",
   url = "http://books.google.com/books?id=MS6QX9mvNGIC",
@@ -377,7 +377,7 @@
 }
 
 @Book{ wickens2008macroeconomic,
-  title = "{Macroeconomic Theory: A dynamic general equilibrium approach}",
+  title = "Macroeconomic Theory: A dynamic general equilibrium approach",
   author = "M. Wickens",
   isbn = "0691116407",
   year = "2008",
@@ -385,7 +385,7 @@
 }
 
 @Article{ gurkaynak2005sensitivity,
-  title = "{The sensitivity of long-term interest rates to economic news: Evidence and implications for macroeconomic models}",
+  title = "The sensitivity of long-term interest rates to economic news: Evidence and implications for macroeconomic models",
   author = {R.S. G{\"u}rkaynak and B. Sack and E. Swanson},
   journal = "The American Economic Review",
   volume = "95",
@@ -397,7 +397,7 @@
 }
 
 @Article{ gagnon2010large,
-  title = "{Large-scale asset purchases by the Federal Reserve: Did they work?}",
+  title = "Large-scale asset purchases by the Federal Reserve: Did they work?",
   author = "J. Gagnon and M. Raskin and J. Remache and B. Sack",
   journal = "Federal Reserve Bank of New York Staff Report",
   volume = "441",
@@ -405,7 +405,7 @@
 }
 
 @Article{ kregel2008using,
-  title = "{Using Minsky's cushions of safety to analyze the crisis in the US subprime mortgage market}",
+  title = "Using Minsky's cushions of safety to analyze the crisis in the US subprime mortgage market",
   author = "J. Kregel",
   journal = "International Journal of Political Economy",
   volume = "37",
@@ -417,7 +417,7 @@
 }
 
 @Article{ kim1999has,
-  title = "{Has the US economy become more stable? A Bayesian approach based on a Markov-switching model of the business cycle}",
+  title = "Has the US economy become more stable? A Bayesian approach based on a Markov-switching model of the business cycle",
   author = "C.J. Kim and C.R. Nelson",
   journal = "Review of Economics and Statistics",
   volume = "81",
@@ -429,7 +429,7 @@
 }
 
 @Article{ blanchard2001long,
-  title = "{The long and large decline in US output volatility}",
+  title = "The long and large decline in US output volatility",
   author = "O. Blanchard and J. Simon",
   journal = "Brookings Papers on Economic Activity",
   volume = "2001",
@@ -441,7 +441,7 @@
 }
 
 @Article{ chauvet2001recent,
-  title = "{Recent changes in the US business cycle}",
+  title = "Recent changes in the US business cycle",
   author = "M. Chauvet and S. Potter",
   journal = "The Manchester School",
   volume = "69",
@@ -453,14 +453,14 @@
 }
 
 @Misc{ kaminsky2003short,
-  title = "{Short-run pain, long-run gain: The effects of financial liberalization}",
+  title = "Short-run pain, long-run gain: The effects of financial liberalization",
   author = "G.L. Kaminsky and S. Schmukler",
   year = "2003",
   publisher = "National Bureau of Economic Research Cambridge, Mass., USA"
 }
 
 @Book{ poor1865manual,
-  title = "{Manual of the Railroads of the United States}",
+  title = "Manual of the Railroads of the United States",
   author = "H.V. Poor",
   year = "1865",
   publisher = "HV \& HW Poor"
@@ -471,7 +471,7 @@
 @Article{ cochran1950,
   author = "T. Cochran",
   journal = "The Journal of Economic History",
-  title = "{North American Railroads: Land Grants and Railroad Entrepreneurship}",
+  title = "North American Railroads: Land Grants and Railroad Entrepreneurship",
   year = "1950",
   number = "Supplement",
   pages = "53--67",
@@ -480,7 +480,7 @@
 }
 
 @Article{ blanchard1993stock,
-  title = "{The Stock Market, Profit, and Investment}",
+  title = "The Stock Market, Profit, and Investment",
   author = "O. Blanchard and C. Rhee and L. Summers",
   journal = "The Quarterly Journal of Economics",
   volume = "108",
@@ -492,7 +492,7 @@
 }
 
 @Article{ tobin1969general,
-  title = "{A general equilibrium approach to monetary theory}",
+  title = "A general equilibrium approach to monetary theory",
   author = "J. Tobin",
   journal = "Journal of money, credit and banking",
   volume = "1",
@@ -504,7 +504,7 @@
 }
 
 @Article{ tobin1977asset,
-  title = "{Asset markets and the cost of capital}",
+  title = "Asset markets and the cost of capital",
   author = "J. Tobin and W.C. Brainard",
   journal = "Economic Progress, Private Values, and Public Policy. North Holland, Amsterdam",
   pages = "235--62",
@@ -512,7 +512,7 @@
 }
 
 @Article{ lindenberg1981tobin,
-  title = "{Tobin's q ratio and industrial organization}",
+  title = "Tobin's q ratio and industrial organization",
   author = "E.B. Lindenberg and S.A. Ross",
   journal = "The Journal of Business",
   volume = "24",
@@ -521,7 +521,7 @@
 }
 
 @Article{ langlitzen1989,
-  title = "{Dividend Announcements: Cash Flow Signalling vs. Free Cash Flow Hypothesis?}",
+  title = "Dividend Announcements: Cash Flow Signalling vs. Free Cash Flow Hypothesis?",
   author = "L.H.P Lang and R.H. Litzenberger",
   journal = "Journal of Financial Economics",
   volume = "54",
@@ -533,7 +533,7 @@
 }
 
 @Article{ chung1994simple,
-  title = "{A simple approximation of Tobin's q}",
+  title = "A simple approximation of Tobin's q",
   author = "K.H. Chung and S.W. Pruitt",
   journal = "Financial management",
   volume = "23",
@@ -545,7 +545,7 @@
 }
 
 @Book{ macaulay1939some,
-  title = "{Some Theoretical Problems Suggested by the Movements of Interest Rates, Bond Yields and Stock Prices in the United States Since 1856}",
+  title = "Some Theoretical Problems Suggested by the Movements of Interest Rates, Bond Yields and Stock Prices in the United States Since 1856",
   author = "F.R. Macaulay",
   year = "1939",
   publisher = "National bureau of economic research"
@@ -561,7 +561,7 @@
 }
 
 @Article{ ellis1946forfeiture,
-  title = "{The Forfeiture of Railroad Land Grants, 1867-1894}",
+  title = "The Forfeiture of Railroad Land Grants, 1867-1894",
   author = "D.M. Ellis",
   journal = "The Mississippi Valley Historical Review",
   volume = "33",
@@ -573,7 +573,7 @@
 }
 
 @Article{ blundell1992investment,
-  title = "{Investment and Tobin’s Q}",
+  title = "Investment and Tobin’s Q",
   author = "R. Blundell and S. Bond and M. Devereux and F. Schiantarelli",
   journal = "Journal of Econometrics",
   volume = "51",
@@ -583,7 +583,7 @@
 }
 
 @Article{ almunia2010great,
-  title = "{From Great Depression to great credit crisis: similarities, differences and lessons}",
+  title = "From Great Depression to great credit crisis: similarities, differences and lessons",
   author = "M. Almunia and A. B{\'e}n{\'e}trix and B. Eichengreen and K.H. O’Rourke and G. Rua",
   journal = "Economic Policy",
   volume = "25",
@@ -596,14 +596,12 @@
 
 \%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%Dissertation\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%
 
-@unpublished{rich2012,
-address = {33 Liberty Street, Federal Reserve Bank of New York, NY 10045-0001},
-author = {Rich, Robert and Song, Joseph and Tracy, Joseph},
-institution = {Federal Reserve Bank of New York},
-pages = {1--48},
-title = {{The Measurement and Behavior of Uncertainty: Evidence from the ECB
-          Survey of Professional Forecasters}},
-year = {2012}
+@article{rich2012,
+  title = {The Measurement and Behavior of Uncertainty: Evidence from the {ECB}
+          Survey of Professional Forecasters},
+  author = {Rich, Robert and Song, Joseph and Tracy, Joseph},
+  journal={SSRN 2192510, \url{http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2192510}},
+  year={2012}
 }
 
 @article{rich2010relationships,
@@ -617,11 +615,11 @@ year = {2012}
   publisher={MIT Press}
 }
 
-@misc{zarnowitz1987consensus,
+@article{zarnowitz1987consensus,
   title={Consensus and Uncertainty in Economic Prediction},
   author={Zarnowitz, Victor and Lambros, Louis A},
   year={1987},
-  publisher={National Bureau of Economic Research Cambridge, Mass., USA}
+  journal={National Bureau of Economic Research, \url{http://www.nber.org/papers/w1171}},
 }
 
 @article{giordani2003inflation,
@@ -636,7 +634,7 @@ year = {2012}
 }
 
 @Article{ guvenen2009parsimonious,
-  title = "{A parsimonious macroeconomic model for asset pricing}",
+  title = "A parsimonious macroeconomic model for asset pricing",
   author = "F. Guvenen",
   journal = "Econometrica",
   volume = "77",
@@ -648,7 +646,7 @@ year = {2012}
 }
 
 @Article{ poterba1995stock,
-  title = "{Stock ownership patterns, stock market fluctuations, and consumption}",
+  title = "Stock ownership patterns, stock market fluctuations, and consumption",
   author = "J.M. Poterba and A.A. Samwick and A. Shleifer and R.J. Shiller",
   journal = "Brookings papers on economic activity",
   pages = "295--372",
@@ -658,7 +656,7 @@ year = {2012}
 }
 
 @Article{ bernanke1999financial,
-  title = "{The financial accelerator in a quantitative business cycle framework}",
+  title = "The financial accelerator in a quantitative business cycle framework",
   author = "B.S. Bernanke and M. Gertler and S. Gilchrist",
   journal = "Handbook of macroeconomics",
   volume = "1",
@@ -669,14 +667,14 @@ year = {2012}
 }
 
 @Article{ bernanke2000monetary,
-  title = "{Monetary policy and asset price volatility}",
+  title = "Monetary policy and asset price volatility",
   author = "B.S. Bernanke and M. Gertler",
   journal = "NBER working paper",
   year = "2000"
 }
 
 @Book{ minsky1986stabilizing,
-  title = "{Stabilizing an unstable economy}",
+  title = "Stabilizing an unstable economy",
   author = "H.P. Minsky",
   isbn = "0071592997",
   year = "1986",
@@ -692,7 +690,7 @@ year = {2012}
 }
 
 @Article{ minsky1977theory,
-  title = "{A theory of systemic fragility}",
+  title = "A theory of systemic fragility",
   author = "H. Minsky",
   journal = "Financial Crises: Institutions and Markets in a Fragile Environment",
   pages = "138--152",
@@ -700,7 +698,7 @@ year = {2012}
 }
 
 @Article{ iacoviello2005house,
-  title = "{House prices, borrowing constraints, and monetary policy in the business cycle}",
+  title = "House prices, borrowing constraints, and monetary policy in the business cycle",
   author = "M. Iacoviello",
   journal = "American Economic Review",
   pages = "739--764",
@@ -710,7 +708,7 @@ year = {2012}
 }
 
 @Article{ kiyotaki1997credit,
-  title = "{Credit cycles}",
+  title = "Credit cycles",
   author = "N. Kiyotaki and J. Moore",
   journal = "Journal of Political Economy",
   volume = "105",
@@ -722,7 +720,7 @@ year = {2012}
 }
 
 @Article{ calvo1983staggered,
-  title = "{Staggered prices in a utility-maximizing framework}",
+  title = "Staggered prices in a utility-maximizing framework",
   author = "G.A. Calvo",
   journal = "Journal of Monetary Economics",
   volume = "12",
@@ -734,15 +732,15 @@ year = {2012}
 }
 
 @Misc{ fred,
-  title = "{Federal Reserve Economic Data}",
-  author = "{Federal Reserve Bank of St. Louis}",
+  title = "Federal Reserve Economic Data",
+  author = "Federal Reserve Bank of St. Louis",
   month = "12",
   year = "2013",
   howpublished = "\url{http://research.stlouisfed.org/fred2/}"
 }
 
 @Misc{ nber,
-  title = "{National Bureau of Economic Research}",
+  title = "National Bureau of Economic Research",
   author = "NBER",
   location = "Cambridge, MA",
   month = "12",
@@ -751,8 +749,8 @@ year = {2012}
 }
 
 @Misc{ spf,
-  title = "{Survey of Professional Forecasters}",
-  author = "{Federal Reserve Bank of Philadelphia}",
+  title = "Survey of Professional Forecasters",
+  author = "Federal Reserve Bank of Philadelphia",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/}"
@@ -846,28 +844,28 @@ publisher={Elsevier}
 }
 @Misc{ bls,
   title = "Bureau of Labor Statistics",
-  author = "{BLS}",
+  author = "BLS",
   month = "12",
   year = "2012",
   howpublished = "\url{http://www.bls.gov/}"
 }
 @Misc{ bea,
   title = "Bureau of Economic Analysis: NIPA Tables",
-  author = "{NIPA}",
+  author = "NIPA",
   month = "10",
   year = "2010",
   howpublished = "\url{http://www.bea.gov/national/nipaweb/SelectTable.asp}"
 }
 @Misc{ mich,
   title = "Survey of Consumers",
-  author = "{Thomson Reuters and University of Michigan}",
+  author = "Thomson Reuters and University of Michigan",
   month = "10",
   year = "2010",
   howpublished = "\url{http://www.bea.gov/national/nipaweb/SelectTable.asp}"
 }
 @article{bloomberg,
   title = "Commodity quote: Eurodollar Rate",
-  author = "{Bloomberg database}",
+  author = "Bloomberg database",
   journal = "American University",
   month = "12",
   year = "2012",
@@ -884,7 +882,7 @@ title = {{Numpy}: Open source scientific tools for {Python}},
 year ={2005--2014},
 note = "\url{http://www.numpy.org/}"
 }
-@ONLINE{numpyextend,
+@misc{numpyextend,
 author = {Travis Oliphant and others},
 title = {How to extend NumPy},
 year ={2014},
@@ -1216,7 +1214,7 @@ address = {Natick, Massachusetts}
   url={http://ideas.repec.org/a/mcb/jmoncb/v38y2006i7p1847-1875.html}
 }
 @Article{hoerdahletal2008,
-  title={The Yield Curve and Macroeconomic Dynamics*},
+  title={The Yield Curve and Macroeconomic Dynamics},
   author={H{\"o}rdahl, P. and Tristani, O. and Vestin, D.},
   journal={The Economic Journal},
   volume={118},
@@ -1233,7 +1231,7 @@ address = {Natick, Massachusetts}
   month=Nov,
   institution={C.E.P.R. Discussion Papers},
   type={CEPR Discussion Papers},
-  url={http://ideas.repec.org/p/cpr/ceprdp/5341.html},
+  url="\url{http://ideas.repec.org/p/cpr/ceprdp/5341.html}",
   number={5341},
   abstract={The estimation of dynamic no-arbitrage term structure models with a flexible specification of the market price of risk is beset by a severe small-sample problem arising from the highly persistent nature of interest rates. We propose using survey forecasts of a short-term interest rate as an additional input to the estimation to overcome the problem. The three-factor pure-Gaussian model thus estimated with the U.S. Treasury term structure for the 1990-2003 period generates a stable estimate of the expected path of the short rate, reproduces the well-known stylized patterns in the expectations hypothesis tests, and captures some of the short-run variations in the survey forecast of the changes in longer-term interest rates.},
   keywords={Dynamic term structure models; expectations hypothesis; interest rate forecasts; survey data; term p}
@@ -1343,9 +1341,9 @@ address = {Natick, Massachusetts}
 }
 
 @article{grishchenko2012inflation,
-  title={The Inflation Risk Premium: Evidence from the TIPS Market},
+  title={The Inflation Risk Premium: Evidence from the {TIPS} Market},
   author={Grishchenko, Olesya and Huang, Jing-zhi Jay},
-  journal={Available at SSRN 2147016},
+  journal={SSRN 1108401, \url{http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1108401}},
   year={2012}
 }
 
@@ -1372,9 +1370,8 @@ address = {Natick, Massachusetts}
   author={CRSP, Center for Research in Security Prices.
           Graduate School of Business, The University of Chicago},
   year=2013,
-  title={Fama-Bliss Discount Bonds – Monthly Only},
-  note={Used with permission. All rights reserved.},
-  note={\url{http://www.vrplumber.com/programming/runsnakerun/}}
+  title={{Fama-Bliss} Discount Bonds - Monthly Only},
+  note={Used with permission. All rights reserved. \url{http://www.vrplumber.com/programming/runsnakerun/}},
 }
 @incollection{mankiw2004disagreement,
   title={Disagreement about inflation expectations},
@@ -1483,14 +1480,14 @@ address = {Natick, Massachusetts}
 }
 @Misc{greenbook,
   title = "Greenbook Data Sets",
-  author = "{Federal Reserve Bank of Philadelphia}",
+  author = "Federal Reserve Bank of Philadelphia",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/greenbook-data/}"
 }
 @Misc{rtmacro,
   title = "Real-Time Data Set for Macroeconomists",
-  author = "{Federal Reserve Bank of Philadelphia}",
+  author = "Federal Reserve Bank of Philadelphia",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/real-time-data/}"
@@ -1580,10 +1577,10 @@ year={1993},
   address={Princeton, New Jersey},
 }
 @misc{rsr,
-author = {Fletcher, M},
-title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
-year ={2001--2013},
-note = "\url{http://www.vrplumber.com/programming/runsnakerun/}"
+    author = {Fletcher, M},
+    title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
+    year ={2001--2013},
+    note = "\url{http://www.vrplumber.com/programming/runsnakerun/}"
 }
 @Manual{statacite,
   title = {Stata Statistical Software: Release 13},
@@ -1614,7 +1611,7 @@ number = "2",
 pages  = "101-121",
 month  = "February",
 YEAR   = "2005",
-NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
+NOTE   = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
 }
 @article{andrews1994approximately,
   title={Approximately median-unbiased estimation of autoregressive models},
@@ -1653,7 +1650,7 @@ NOTE           = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
   publisher={American Economic Association}
 }
 @article{pearson1994exploiting,
-  title={Exploiting the conditional density in estimating the term structure: An application to the Cox, Ingersoll, and Ross model},
+  title={Exploiting the conditional density in estimating the term structure: An application to the {Cox, Ingersoll, and Ross} model},
   author={Pearson, Neil D and Sun, Tong-Sheng},
   journal={The Journal of Finance},
   volume={49},
