Cleaned up a lot of references for dissertation

--- a/master1.bib
+++ b/master1.bib
@@ -173,7 +173,7 @@
 
 @Article{ rudebusch2008macro,
   title = "A macro-finance model of the Term Structure, Monetary Policy and the Economy",
-  author = "G.D. Rudebusch and T. Wu",
+  author = "Glenn D Rudebusch and Tao Wu",
   journal = "The Economic Journal",
   volume = "118",
   number = "530",
@@ -183,7 +183,7 @@
 }
 
 @Article{rudebusch2004macro,
-  author={Glenn Rudebusch and Tao Wu},
+  author={Glenn D Rudebusch and Tao Wu},
   title={A macro-finance model of the term structure, monetary policy, and the economy},
   journal={Proceedings},
   year=2004,
@@ -209,7 +209,7 @@
 
 @Article{ rudebusch2008examining,
   title = "Examining the bond premium puzzle with a DSGE model",
-  author = "G.D. Rudebusch and E.T. Swanson",
+  author = "Glenn D Rudebusch and Eric T Swanson",
   journal = "Journal of Monetary Economics",
   volume = "55",
   pages = "S111--S126",
@@ -219,7 +219,7 @@
 
 @book{ keynes1936general,
   title = "The General Theory of Employment, Interest and Money",
-  author = "J.M. Keynes",
+  author = "John M Keynes",
   year = "1936",
   publisher = "The Macmillan Press.",
   address = "London"
@@ -227,7 +227,7 @@
 
 @Article{ sack2005monetary,
   title = "Monetary policy alternatives at the zero bound: An empirical assessment",
-  author = " B. Bernanke and V. Reinhart and B. Sack",
+  author = " Ben S Bernanke and Vincent R Reinhart and Brian P Sack",
   journal = "Brookings Papers on Economic Activity",
   volume = "2004",
   number = "2",
@@ -239,7 +239,7 @@
 
 @Article{ang2006does,
   title = "What does the yield curve tell us about GDP growth?",
-  author = "A. Ang and M. Piazzesi and M. Wei",
+  author = "Andrew Ang and Monika Piazzesi and Min Wei",
   journal = "Journal of Econometrics",
   volume = "131",
   number = "1-2",
@@ -251,7 +251,7 @@
 
 @Article{ rudebusch2007macroeconomic,
   title = "Macroeconomic implications of changes in the term premium",
-  author = "G.D. Rudebusch and B.P. Sack and E.T. Swanson",
+  author = "Glenn D Rudebusch and Brian P Sack and Eric T Swanson",
   journal = "Review-Federal Reserve Bank of Saint Louis",
   volume = "89",
   number = "4",
@@ -300,7 +300,7 @@
 
 @InProceedings{ taylor1993discretion,
   title = "Discretion versus policy rules in practice",
-  author = "J.B. Taylor",
+  author = "John B Taylor",
   booktitle = "Carnegie-Rochester conference series on public policy",
   volume = "39",
   pages = "195--214",
@@ -311,7 +311,7 @@
 
 @Article{ orphanides2001monetary,
   title = "Monetary policy rules based on real-time data",
-  author = "A. Orphanides",
+  author = "Athanasios Orphanides",
   journal = "American Economic Review",
   volume = "91",
   number = "4",
@@ -675,7 +675,7 @@
 
 @Book{ minsky1986stabilizing,
   title = "Stabilizing an unstable economy",
-  author = "H.P. Minsky",
+  author = "Hyman P Minsky",
   isbn = "0071592997",
   year = "1986",
   publisher = "McGraw Hill Professional"
@@ -683,7 +683,7 @@
 
 @Book{ minsky1982can,
   title = {{Can" it" happen again?: essays on instability and finance}},
-  author = "H.P. Minsky",
+  author = "Hyman P Minsky",
   isbn = "0873322134",
   year = "1982",
   publisher = "ME Sharpe"
@@ -691,7 +691,7 @@
 
 @Article{ minsky1977theory,
   title = "A theory of systemic fragility",
-  author = "H. Minsky",
+  author = "Hyman P Minsky",
   journal = "Financial Crises: Institutions and Markets in a Fragile Environment",
   pages = "138--152",
   year = "1977"
@@ -733,7 +733,7 @@
 
 @Misc{ fred,
   title = "Federal Reserve Economic Data",
-  author = "Federal Reserve Bank of St. Louis",
+  author = {{Federal Reserve Bank of St. Louis}},
   month = "12",
   year = "2013",
   howpublished = "\url{http://research.stlouisfed.org/fred2/}"
@@ -748,13 +748,6 @@
   howpublished = "\url{http://www.nber.org/}"
 }
 
-@Misc{ spf,
-  title = "Survey of Professional Forecasters",
-  author = "Federal Reserve Bank of Philadelphia",
-  month = "12",
-  year = "2013",
-  howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/}"
-}
 
 @Article{ piazzesi2007housing,
   title = "Housing, consumption and asset pricing",
@@ -912,15 +905,14 @@ note = "\url{http://cython.org/}"
 
 @misc{matlab,
 year = {2012},
-author = {MATLAB},
-title = {Version 8.0 (R2012b)},
-publisher = {The MathWorks Inc.},
+author = {The MathWorks Inc.},
+title = {MATLAB, Version 8.0 (R2012b)},
 address = {Natick, Massachusetts}
 }
 
 @article{litterman1991common,
   title={Common factors affecting bond returns},
-  author={Litterman, R.B. and Scheinkman, J.},
+  author={Robert Litterman and Jos\'{e} Scheinkman},
   journal={The Journal of Fixed Income},
   volume={1},
   number={1},
@@ -1299,9 +1291,8 @@ address = {Natick, Massachusetts}
 }
 @book{matlab:2013,
   year = {2013},
-  author = {MATLAB},
-  title = {version 8.1 (R2013a)},
-  publisher = {The MathWorks Inc.},
+  author = {{The MathWorks Inc.}},
+  title = {{MATLAB}, Version 8.1 (R2013a)},
   address = {Natick, Massachusetts}
 }
 @misc{matlab:uncon,
@@ -1478,16 +1469,23 @@ address = {Natick, Massachusetts}
   number={1},
   year={2007}
 }
+@Misc{ spf,
+  title = "Survey of Professional Forecasters",
+  author = {{Federal Reserve Bank of Philadelphia}},
+  month = "12",
+  year = "2013",
+  howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/}"
+}
 @Misc{greenbook,
   title = "Greenbook Data Sets",
-  author = "Federal Reserve Bank of Philadelphia",
+  author = "{{Federal Reserve Bank of Philadelphia}}",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/greenbook-data/}"
 }
 @Misc{rtmacro,
   title = "Real-Time Data Set for Macroeconomists",
-  author = "Federal Reserve Bank of Philadelphia",
+  author = "{{Federal Reserve Bank of Philadelphia}}",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/real-time-data/}"
@@ -1563,7 +1561,7 @@ address = {Natick, Massachusetts}
 }
 @article{chenscott1993,
 title={Maximum likelihood estimation for a multifactor equilibrium model of the term structure of interest rates},
-author={Chen, R.R. and Scott, L.},
+author={Ren-Raw Chen and Louis Scott},
 journal={Journal of Fixed Income},
 volume={3},
 pages={14--31},
@@ -1577,7 +1575,7 @@ year={1993},
   address={Princeton, New Jersey},
 }
 @misc{rsr,
-    author = {Fletcher, M},
+    author = {Fletcher, Mike},
     title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
     year ={2001--2013},
     note = "\url{http://www.vrplumber.com/programming/runsnakerun/}"
