Updated and corrected entries

--- a/master1.bib
+++ b/master1.bib
@@ -678,7 +678,8 @@
   author = "Hyman P Minsky",
   isbn = "0071592997",
   year = "1986",
-  publisher = "McGraw Hill Professional"
+  publisher = "Yale University Press"
+  address = "New Haven"
 }
 
 @Book{ minsky1982can,
@@ -827,7 +828,7 @@ year={2008}
 }
 @article{ang2003no,
 title={A no-arbitrage vector autoregression of term structure dynamics with macroeconomic and latent variables},
-author={Ang, A. and Piazzesi, M.},
+author={Ang, Andrew and Piazzesi, Monika},
 journal={Journal of Monetary Economics},
 volume={50},
 number={4},
@@ -856,12 +857,11 @@ publisher={Elsevier}
   year = "2010",
   howpublished = "\url{http://www.bea.gov/national/nipaweb/SelectTable.asp}"
 }
-@article{bloomberg,
+@misc{bloomberg,
   title = "Commodity quote: Eurodollar Rate",
-  author = "Bloomberg database",
-  journal = "American University",
-  month = "12",
+  author = "Bloomberg",
   year = "2012",
+  howpublished = "January 1980 - December 2012, via Bloomberg, LP, accessed December 2012"
 }
 @misc{scipy,
 author = {Eric Jones and Travis Oliphant and Pearu Peterson and others},
@@ -1314,7 +1314,7 @@ address = {Natick, Massachusetts}
   publisher={MIT press}
 }
 @techreport{vixcboe,
-  title={The CBOE VOLATILITY INDEX - VIX},
+  title={The {CBOE} VOLATILITY INDEX - {VIX}},
   author={CBOE},
   year={2009},
   institution={Chicago Board Options Exchange, Incorporated}
@@ -1500,11 +1500,15 @@ address = {Natick, Massachusetts}
   year={2012},
   publisher={Elsevier}
 }
-@article{doh2006moves,
-  title={What moves the yield curve? Lessons from an estimated nonlinear macro model},
+@article{doh2011yield,
+  title={Yield curve in an estimated nonlinear macro model},
   author={Doh, Taeyoung},
-  journal={manuscript, University of Pennsylvania},
-  year={2006}
+  journal={Journal of Economic Dynamics and Control},
+  volume={35},
+  number={8},
+  pages={1229--1244},
+  year={2011},
+  publisher={Elsevier}
 }
 @article{croushore2001real,
   title={A real-time data set for macroeconomists},
@@ -1669,7 +1673,7 @@ NOTE   = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
 }
 @misc{kcachegrind,
 author = {Josef Weidendorfer},
-title = {kcachegrind; Call Graph Viewer},
+title = {KCachegrind; Call Graph Viewer},
 year ={2002,2003},
 note = "\url{http://kcachegrind.sourceforge.net/html/Home.html}"
 }
