Fixed typo in minsky

--- a/master1.bib
+++ b/master1.bib
@@ -678,7 +678,7 @@
   author = "Hyman P Minsky",
   isbn = "0071592997",
   year = "1986",
-  publisher = "Yale University Press"
+  publisher = "Yale University Press",
   address = "New Haven"
 }
 
