--- a/master1.bib
+++ b/master1.bib
@@ -808,7 +808,7 @@
   year={2011}
 }
 @Article{diebold2006macroeconomy,
-  author={Diebold, Francis X. and Rudebusch, Glenn D. and Bora{\v g}an Aruoba, S.},
+  author={Diebold, Francis X. and Rudebusch, Glenn D. and Aruoba, Boragan S.},
   title={The macroeconomy and the yield curve: a dynamic latent factor approach},
   journal={Journal of Econometrics},
   year=2006,
@@ -817,7 +817,6 @@
   pages={309-338},
   month={},
   keywords={},
-  abstract={We estimate a model that summarizes the yield curve using latent factors (specifically, level, slope, and curvature) and also includes observable macroeconomic variables (specifically, real activity, inflation, and the monetary policy instrument). Our goal is to provide a characterization of the dynamic interactions between the macroeconomy and the yield curve. We find strong evidence of the effects of macro variables on future movements in the yield curve and evidence for a reverse influence as well. We also relate our results to the expectations hypothesis.<P>(This abstract was borrowed from another version of this item.)},
   url={http://ideas.repec.org/a/eee/econom/v131y2006i1-2p309-338.html}
 }
 @article{cochrane2008decomposing,
@@ -1548,6 +1547,11 @@ address = {Natick, Massachusetts}
         author = "Barton Baker",
         school = "American University",
         year = "2014"
+}
+@unpublished{
+        bakerbsrrepl,
+        title = {An Extension and Replication of Bernanke, Reinhart, and Sack (2005)},
+        author = "B. Baker",
 }
 @Article{PER-GRA:2007,
   Author    = {P\'erez, Fernando and Granger, Brian E.},
