Updated with another small change to wok with biber

--- a/master1.bib
+++ b/master1.bib
@@ -734,7 +734,7 @@
 
 @Misc{ fred,
   title = "Federal Reserve Economic Data",
-  author = {{Federal Reserve Bank of St. Louis}},
+  author = {Federal Reserve Bank of St. Louis},
   month = "12",
   year = "2013",
   howpublished = "\url{http://research.stlouisfed.org/fred2/}"
@@ -1470,21 +1470,21 @@ address = {Natick, Massachusetts}
 }
 @Misc{ spf,
   title = "Survey of Professional Forecasters",
-  author = {{Federal Reserve Bank of Philadelphia}},
+  author = {Federal Reserve Bank of Philadelphia},
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/}"
 }
 @Misc{greenbook,
   title = "Greenbook Data Sets",
-  author = "{{Federal Reserve Bank of Philadelphia}}",
+  author = "{Federal Reserve Bank of Philadelphia}",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/greenbook-data/}"
 }
 @Misc{rtmacro,
   title = "Real-Time Data Set for Macroeconomists",
-  author = "{{Federal Reserve Bank of Philadelphia}}",
+  author = "{Federal Reserve Bank of Philadelphia}",
   month = "12",
   year = "2013",
   howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/real-time-data/}"
