Added phd dissertation

--- a/master1.bib
+++ b/master1.bib
@@ -1548,6 +1548,14 @@ address = {Natick, Massachusetts}
         school = "American University",
         year = "2014"
 }
+@PhdThesis{
+        diss,
+        title = {A Computational Approach to Affine Models of the Term
+          Structure},
+        author = "Barton Baker",
+        school = "American University",
+        year = "2014"
+}
 @unpublished{
         bakerbsrrepl,
         title = {An Extension and Replication of Bernanke, Reinhart, and Sack (2005)},
